--- a/tests/selenium/KOALA/koala_login.html
+++ b/tests/selenium/KOALA/koala_login.html
@@ -33,7 +33,7 @@
 <tr>
 	<td>type</td>
 	<td>id=account</td>
-	<td>eucalyptus</td>
+	<td>ui-test-acct-00</td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
@@ -48,7 +48,7 @@
 <tr>
 	<td>type</td>
 	<td>id=password</td>
-	<td>mypassword01</td>
+	<td>mypassword0</td>
 </tr>
 <tr>
 	<td>click</td>
