Added comments to test cases.

--- a/tests/selenium/KOALA/create-s-group-1-with-rules-and-tags.html
+++ b/tests/selenium/KOALA/create-s-group-1-with-rules-and-tags.html
@@ -22,6 +22,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>echo</td>
+	<td>Goes to Security Group Landing page through the menus, and creates a new security geroup.</td>
+	<td></td>
+</tr>
+<tr>
 	<td>assertVisible</td>
 	<td>id=resource-menu-netsec</td>
 	<td></td>
