--- a/tests/selenium/KOALA/get_dashboard_counts.html
+++ b/tests/selenium/KOALA/get_dashboard_counts.html
@@ -16,6 +16,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>echo</td>
+	<td>Gets dashboard counts, including IAM users and groups for an admin user.</td>
+	<td></td>
+</tr>
+<tr>
 	<td>assertText</td>
 	<td>link=Launch Instance</td>
 	<td>Launch Instance</td>
