--- a/tests/selenium/KOALA/attach_volume_1_to_instance_1_on_volumes_lp.html
+++ b/tests/selenium/KOALA/attach_volume_1_to_instance_1_on_volumes_lp.html
@@ -57,6 +57,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForVisible</td>
+	<td>css=//td[data-dropdown=&quot;item-dropdown_${volume_1_id}&quot;]</td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
 	<td>css=//td[data-dropdown=&quot;item-dropdown_${volume_1_id}&quot;]</td>
 	<td></td>
