--- a/tests/selenium/KOALA/Keypairs/create-key-pair-from-dashboard.html
+++ b/tests/selenium/KOALA/Keypairs/create-key-pair-from-dashboard.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://10.111.101.112:8888/" />
-<title>delete-s-group-from-landing-page</title>
+<title>create-key-pair-from-dashboard</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">delete-s-group-from-landing-page</td></tr>
+<tr><td rowspan="1" colspan="3">create-key-pair-from-dashboard</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -17,65 +17,66 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
-	<td>id=resource-menu-netsec</td>
+	<td>assertVisible</td>
+	<td>id=resource-menu-dashboard</td>
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>id=resource-menu-netsec</td>
+	<td>setTimeout</td>
+	<td>60000</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=resource-menuitem-securitygroups</td>
+	<td>id=resource-menu-dashboard</td>
 	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
-	<td>link=group</td>
+	<td>assertVisible</td>
+	<td>link=Create key pair</td>
 	<td></td>
 </tr>
 <tr>
-	<td>storeAttribute</td>
-	<td>//td/a[text()=&quot;group&quot;]@href</td>
-	<td>store</td>
-</tr>
-<tr>
-	<td>echo</td>
-	<td>${store}</td>
+	<td>clickAndWait</td>
+	<td>link=Create key pair</td>
 	<td></td>
 </tr>
 <tr>
 	<td>storeEval</td>
-	<td>storedVars['store'].slice(16,27);</td>
-	<td>sg</td>
+	<td>(Math.random().toString(36)+&quot;000000000&quot;).slice(2,7);</td>
+	<td>str</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=key-name</td>
+	<td>key${str}</td>
+</tr>
+<tr>
+	<td>store</td>
+	<td>key${str}</td>
+	<td>keypair_name</td>
 </tr>
 <tr>
 	<td>echo</td>
-	<td>${sg}</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>//a[@data-dropdown=&quot;item-dropdown_${sg}&quot;]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>echo</td>
-	<td>Drop down for actions menu did not open</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>xpath=(//a[contains(text(),'Delete security group')])[2]</td>
+	<td>${keypair_name}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=form.ng-pristine.ng-valid &gt; button.button</td>
+	<td>css=button.button</td>
 	<td></td>
 </tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
+
 </tbody></table>
 </body>
 </html>
