--- a/tests/selenium/KOALA/StoreAndSet/store-s-group-data-as-s_group_1.html
+++ b/tests/selenium/KOALA/StoreAndSet/store-s-group-data-as-s_group_1.html
@@ -4,33 +4,34 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://10.111.101.112:8888/" />
-<title>save-instance-data-as-instance_1</title>
+<title>store-s-group-data-as-s_group_1</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">save-instance-data-as-instance_1</td></tr>
+<tr><td rowspan="1" colspan="3">store-s-group-data-as-s_group_1</td></tr>
 </thead><tbody>
 <tr>
 	<td>store</td>
-	<td>${instance_name}</td>
-	<td>instance_1_name</td>
+	<td>${s_group_name}</td>
+	<td>s_group_1_name</td>
 </tr>
 <tr>
 	<td>echo</td>
-	<td>${instance_1_name}</td>
+	<td>${s_group_1_name}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>store</td>
-	<td>${instance_id}</td>
-	<td>instance_1_id</td>
+	<td>${s_group_id}</td>
+	<td>s_group_1_id</td>
 </tr>
 <tr>
 	<td>echo</td>
-	<td>${instance_1_id}</td>
+	<td>${s_group_1_id}</td>
 	<td></td>
 </tr>
+
 </tbody></table>
 </body>
 </html>
