Reorganized UI tests into directories

--- a/tests/selenium/KOALA/koala_login.html
+++ b/tests/selenium/KOALA/koala_login.html
@@ -26,6 +26,21 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForVisible</td>
+	<td>//dd[@id='euca-tab']/a/span[2]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertVisible</td>
+	<td>//dd[@id='euca-tab']/a/span[2]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//dd[@id='euca-tab']/a/span[2]</td>
+	<td></td>
+</tr>
+<tr>
 	<td>assertVisible</td>
 	<td>id=account</td>
 	<td></td>
