--- a/tests/selenium/KOALA/koala_login.html
+++ b/tests/selenium/KOALA/koala_login.html
@@ -27,17 +27,17 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>//dd[@id='euca-tab']/a/span[2]</td>
+	<td>//dd[@id='euca-tab']/a</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertVisible</td>
-	<td>//dd[@id='euca-tab']/a/span[2]</td>
+	<td>//dd[@id='euca-tab']/a</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>//dd[@id='euca-tab']/a/span[2]</td>
+	<td>//dd[@id='euca-tab']/a</td>
 	<td></td>
 </tr>
 <tr>
