--- a/tests/selenium/KOALA/IAM_Users/IAM_USER.html
+++ b/tests/selenium/KOALA/IAM_Users/IAM_USER.html
@@ -8,15 +8,15 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="../koala_login.html">koala_login</a></td></tr>
-<tr><td><a href="../get_dashboard_counts.html">get-dashboard-counts</a></td></tr>
+<tr><td><a href="koala_login.html">koala_login</a></td></tr>
+<tr><td><a href="get_dashboard_counts.html">get-dashboard-counts</a></td></tr>
 <tr><td><a href="create-user_1-with-no-password-no-policy.html">create-user_1-with-no-key-no-password-no-policy</a></td></tr>
 <tr><td><a href="verify-user-was-created.html">verify-user_1-was-created</a></td></tr>
 <tr><td><a href="verify-users-number-increased-by-1.html">verify-users-number-increased-by-1</a></td></tr>
 <tr><td><a href="create-user-password.html">create-user_1-password</a></td></tr>
-<tr><td><a href="../koala_logout.html">koala_logout</a></td></tr>
+<tr><td><a href="koala_logout.html">koala_logout</a></td></tr>
 <tr><td><a href="test-user-logon.html">test-user_1-logon</a></td></tr>
-<tr><td><a href="../koala_login.html">koala_login</a></td></tr>
+<tr><td><a href="koala_login.html">koala_login</a></td></tr>
 <tr><td><a href="add-monitor-access-to-user_1.html">add-monitor-access-to-user_1</a></td></tr>
 <tr><td><a href="verify-monitor-access-policy-to-user_1.html">verify-monitor-access-policy-to-user_1</a></td></tr>
 <tr><td><a href="verify-status-groups-passwords-access-key-for-user_1-on-launch-page.html">verify-status-groups-passwords-access-key-for-user_1-on-launch-page</a></td></tr>
@@ -27,7 +27,7 @@
 <tr><td><a href="verify-status-groups-passwords-access-key-for-user_2-on-launch-page.html">verify-status-groups-passwords-access-key-for-user_2-on-launch-page</a></td></tr>
 <tr><td><a href="delete-user_2.html">delete-user_2</a></td></tr>
 <tr><td><a href="verify-user_2-deleted.html">verify-user_2-deleted</a></td></tr>
-<tr><td><a href="../koala_logout.html">koala_logout</a></td></tr>
+<tr><td><a href="koala_logout.html">koala_logout</a></td></tr>
 </tbody></table>
 </body>
 </html>
