--- a/tests/selenium/KOALA/IAM_Users/create-user-password.html
+++ b/tests/selenium/KOALA/IAM_Users/create-user-password.html
@@ -72,9 +72,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>sendKeys</td>
-	<td>id=password</td>
-	<td>mypassword0</td>
+	<td>runScript</td>
+	<td>document.getElementById(&quot;password&quot;).value = &quot;mypassword0&quot;</td>
+	<td></td>
 </tr>
 <tr>
 	<td>click</td>
