--- a/tests/selenium/KOALA/IAM_Users/verify-ec2-values.html
+++ b/tests/selenium/KOALA/IAM_Users/verify-ec2-values.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://10.111.5.170:8888/" />
-<title>iam_create_user_password</title>
+<title>verify-user_1-monitor-only-policy</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">iam_create_user_password</td></tr>
+<tr><td rowspan="1" colspan="3">verify-user_1-monitor-only-policy</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -19,6 +19,11 @@
 <tr>
 	<td>setTimeout</td>
 	<td>120000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
 	<td></td>
 </tr>
 <tr>
@@ -37,49 +42,54 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
-	<td>link=${user_1}</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertVisible</td>
-	<td>link=${user_1}</td>
-	<td></td>
-</tr>
-<tr>
 	<td>clickAndWait</td>
 	<td>link=${user_1}</td>
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>link=Security credentials</td>
-	<td></td>
-</tr>
-<tr>
 	<td>type</td>
-	<td>id=new_password</td>
-	<td>foobar</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=new_password2</td>
-	<td>foobar</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=save-password-btn</td>
-	<td></td>
-</tr>
-<tr>
-	<td>typeKeys</td>
 	<td>id=password</td>
 	<td>mypassword0</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=#change-form &gt; div.row &gt; div &gt; input.button.expand</td>
+	<td>link=Quotas</td>
 	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=EC2</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>id=ec2_images_max</td>
+	<td>${ec2_images}</td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>id=ec2_instances_max</td>
+	<td>${ec2_instances}</td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>id=ec2_volumes_max</td>
+	<td>${ec2_volumes}</td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>id=ec2_total_size_all_vols</td>
+	<td>${ec2_volume_size}</td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>id=ec2_snapshots_max</td>
+	<td>${ec2_snapshots}</td>
+</tr>
+<tr>
+	<td>verifyValue</td>
+	<td>id=ec2_elastic_ip_max</td>
+	<td>${ec2_elastic_ip}</td>
 </tr>
 </tbody></table>
 </body>
