--- a/tests/selenium/KOALA/StoreAndSet/set-availability-zone-to-second-on-list.html
+++ b/tests/selenium/KOALA/StoreAndSet/set-availability-zone-to-second-on-list.html
@@ -3,24 +3,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="https://10.111.5.53/" />
-<title>set-s-group-to-default</title>
+<link rel="selenium.base" href="http://10.111.101.112:8888/" />
+<title>set-availability-zone-to-second-on-list</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">set-s-group-to-default</td></tr>
+<tr><td rowspan="1" colspan="3">set-availability-zone-to-second-on-list</td></tr>
 </thead><tbody>
 <tr>
 	<td>store</td>
-	<td>default</td>
-	<td>s_group_name</td>
+	<td>${AZ_2}</td>
+	<td>AZ</td>
 </tr>
 <tr>
 	<td>echo</td>
-	<td>${s_group_name}</td>
+	<td>${AZ}</td>
 	<td></td>
 </tr>
+
 </tbody></table>
 </body>
 </html>
