--- a/tests/selenium/KOALA/StoreAndSet/set-instance-type-to-m1-medium.html
+++ b/tests/selenium/KOALA/StoreAndSet/set-instance-type-to-m1-medium.html
@@ -21,7 +21,16 @@
 	<td>${instance_type}</td>
 	<td></td>
 </tr>
-
+<tr>
+	<td>storeEval</td>
+	<td>storedVars['instance_type'].split(&quot;:&quot;)[0]</td>
+	<td>instance_type_short</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${instance_type_short}</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
