--- a/tests/selenium/KOALA/StoreAndSet/set-s-group-data-to-s_group_1.html
+++ b/tests/selenium/KOALA/StoreAndSet/set-s-group-data-to-s_group_1.html
@@ -4,16 +4,16 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="https://10.111.5.53/" />
-<title>set-s-group-to-default</title>
+<title>set-s-group-data-to-s_group_1</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">set-s-group-to-default</td></tr>
+<tr><td rowspan="1" colspan="3">set-s-group-data-to-s_group_1</td></tr>
 </thead><tbody>
 <tr>
 	<td>store</td>
-	<td>default</td>
+	<td>${s_group_1_name}</td>
 	<td>s_group_name</td>
 </tr>
 <tr>
@@ -21,6 +21,17 @@
 	<td>${s_group_name}</td>
 	<td></td>
 </tr>
+<tr>
+	<td>store</td>
+	<td>${s_group_1_id}</td>
+	<td>s_group_id</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${s_group_id}</td>
+	<td></td>
+</tr>
+
 </tbody></table>
 </body>
 </html>
