--- a/tests/selenium/KOALA/StoreAndSet/store-instance-status.html
+++ b/tests/selenium/KOALA/StoreAndSet/store-instance-status.html
@@ -3,22 +3,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://10.111.101.112:8888/" />
-<title>verify-key-pair-was-deleted</title>
+<link rel="selenium.base" href="https://10.111.5.53/" />
+<title>store-instance-status</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">verify-key-pair-was-deleted</td></tr>
+<tr><td rowspan="1" colspan="3">store-instance-status</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
-	<td>600</td>
-	<td></td>
-</tr>
-<tr>
-	<td>setTimeout</td>
-	<td>60000</td>
+	<td>500</td>
 	<td></td>
 </tr>
 <tr>
@@ -33,44 +28,45 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>id=resource-menu-netsec</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=resource-menu-netsec</td>
+	<td>id=resource-menu-instances</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=resource-menuitem-keypairs</td>
+	<td>id=resource-menu-instances</td>
 	<td></td>
-</tr>
-<tr>
-	<td>store</td>
-	<td></td>
-	<td>empty</td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>id=search-filter</td>
+	<td>link=${instance_name} (${instance_id})</td>
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>id=search-filter</td>
-	<td>${empty}</td>
+	<td>click</td>
+	<td>link=${instance_name} (${instance_id})</td>
+	<td></td>
 </tr>
 <tr>
-	<td>sendKeys</td>
-	<td>id=search-filter</td>
-	<td>${keypair_name}</td>
+	<td>waitForVisible</td>
+	<td>//form[@id='instance-form']/div/div[2]/span</td>
+	<td></td>
 </tr>
 <tr>
-	<td>waitForText</td>
-	<td>//div[@id='tableview']/div/div</td>
-	<td>No items were found ×</td>
+	<td>storeText</td>
+	<td>//form[@id='instance-form']/div/div[2]/span</td>
+	<td>status</td>
 </tr>
+<tr>
+	<td>store</td>
+	<td>${status}</td>
+	<td>instance_status</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${instance_status}</td>
+	<td></td>
+</tr>
+
 </tbody></table>
 </body>
 </html>
