--- a/tests/selenium/KOALA/Keypairs/verify-key-pair-was-created.html
+++ b/tests/selenium/KOALA/Keypairs/verify-key-pair-was-created.html
@@ -43,6 +43,11 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
+	<td>id=refresh-btn</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
 	<td>link=${keypair_name}</td>
 	<td></td>
 </tr>
