--- a/tests/selenium/SNAPSHOT_OPERATIONS.html
+++ b/tests/selenium/SNAPSHOT_OPERATIONS.html
@@ -27,6 +27,11 @@
 <tr><td><a href="KOALA/Snapshots/create-snapshot-from-volumes-lp.html">create-snapshot-from-volumes-lp</a></td></tr>
 <tr><td><a href="KOALA/Snapshots/verify-snapshot-visible-on-lp.html">verify-snapshot-visible-on-lp</a></td></tr>
 <tr><td><a href="KOALA/Snapshots/verify-snapshot-status-is-completed-on-lp.html">verify-snapshot-status-is-completed-on-lp</a></td></tr>
+<tr><td><a href="KOALA/StoreAndSet/store-snapshot-data-as-snapshot_1.html">store-snapshot-data-as-snapshot_1</a></td></tr>
+<tr><td><a href="KOALA/StoreAndSet/set-availability-zone-to-second-on-list.html">set-availability-zone-to-second-on-list</a></td></tr>
+<tr><td><a href="KOALA/Snapshots/create-volume-from-snapshot-on-snapshot-lp.html">create-volume-from-snapshot-on-snapshot-lp</a></td></tr>
+<tr><td><a href="KOALA/Volumes/verify-volume-visible-on-lp.html">verify-volume-visible-on-lp</a></td></tr>
+<tr><td><a href="KOALA/Volumes/verify-volume-status-is-available-on-lp.html">verify-volume-status-is-available-on-lp</a></td></tr>
 <tr><td><a href="KOALA/koala_logout.html">koala_logout</a></td></tr>
 </tbody></table>
 </body>
