--- a/tests/selenium/KOALA/Snapshots/verify-snapshot-not-present-on-lp.html
+++ b/tests/selenium/KOALA/Snapshots/verify-snapshot-not-present-on-lp.html
@@ -3,13 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://10.111.101.112:8888/" />
-<title>verify-snapshot-visible-on-lp</title>
+<link rel="selenium.base" href="https://10.111.5.53/" />
+<title>verify-snapshot-not-present-on-lp</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">verify-snapshot-visible-on-lp</td></tr>
+<tr><td rowspan="1" colspan="3">verify-snapshot-not-present-on-lp</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -47,10 +47,11 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
+	<td>verifyElementNotPresent</td>
 	<td>link=${snapshot_name} (${snapshot_id})</td>
 	<td></td>
 </tr>
+
 </tbody></table>
 </body>
 </html>
