--- a/tests/selenium/KOALA/Volumes/attach-volume-from-volumes-lp.html
+++ b/tests/selenium/KOALA/Volumes/attach-volume-from-volumes-lp.html
@@ -73,7 +73,7 @@
 </tr>
 <tr>
 	<td>echo</td>
-	<td>Verifying ${volume_1} (${volume_id}) shown on the modal</td>
+	<td>Verifying ${volume_name} (${volume_id}) shown on the modal</td>
 	<td></td>
 </tr>
 <tr>
@@ -151,7 +151,6 @@
 	<td>//div[@id='contentwrap']/div[3]/div/form/div/div[2]/span</td>
 	<td>attached</td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
