--- a/tests/selenium/KOALA/Images/verify-image-visible-on-lp.html
+++ b/tests/selenium/KOALA/Images/verify-image-visible-on-lp.html
@@ -3,13 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://10.111.101.112:8888/" />
-<title>verify-snapshot-visible-on-lp</title>
+<link rel="selenium.base" href="https://10.111.5.53/" />
+<title>verify-image-visible-on-lp</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">verify-snapshot-visible-on-lp</td></tr>
+<tr><td rowspan="1" colspan="3">verify-image-visible-on-lp</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -33,12 +33,12 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>css=#snapshots &gt; div.tile &gt; div.content &gt; a &gt; i.icon</td>
+	<td>id=resource-menu-images</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=#snapshots &gt; div.tile &gt; div.content &gt; a &gt; i.icon</td>
+	<td>id=resource-menu-images</td>
 	<td></td>
 </tr>
 <tr>
@@ -48,9 +48,10 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=${snapshot_name} (${snapshot_id})</td>
+	<td>link=${image_id}</td>
 	<td></td>
 </tr>
+
 </tbody></table>
 </body>
 </html>
