--- a/tests/selenium/KOALA/SecurityGroups/verify-s-group-not-present-on-lp.html
+++ b/tests/selenium/KOALA/SecurityGroups/verify-s-group-not-present-on-lp.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://10.111.101.112:8888/" />
-<title>delete-s-group-from-landing-page</title>
+<title>verify-s-group-not-present-on-lp</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">delete-s-group-from-landing-page</td></tr>
+<tr><td rowspan="1" colspan="3">verify-s-group-not-present-on-lp</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -43,37 +43,12 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
+	<td>id=refresh-btn</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyElementNotPresent</td>
 	<td>link=${s_group_name}</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>//a[@id=&quot;table-item-dropdown_${s_group_id}&quot;]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>//ul[@id=&quot;item-dropdown_${s_group_id}&quot;]/li[2]/a</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForText</td>
-	<td>css=b.ng-binding</td>
-	<td>${s_group_name}</td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=delete_securitygroup_submit_button</td>
-	<td></td>
-</tr>
-<tr>
-	<td>storeText</td>
-	<td>id=notifications</td>
-	<td>breadcrumbs</td>
-</tr>
-<tr>
-	<td>echo</td>
-	<td>${breadcrumbs}</td>
 	<td></td>
 </tr>
 </tbody></table>
