--- a/tests/selenium/KOALA/Snapshots/create-snapshot-from-dashboard.html
+++ b/tests/selenium/KOALA/Snapshots/create-snapshot-from-dashboard.html
@@ -3,13 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://10.111.101.112:8888/" />
-<title>create-snapshot-from-volumes-lp</title>
+<link rel="selenium.base" href="https://10.111.5.53/" />
+<title>create-snapshot-from-dashboard</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">create-snapshot-from-volumes-lp</td></tr>
+<tr><td rowspan="1" colspan="3">create-snapshot-from-dashboard</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -17,18 +17,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForElementPresent</td>
+	<td>assertVisible</td>
 	<td>id=resource-menu-dashboard</td>
 	<td></td>
 </tr>
 <tr>
 	<td>setTimeout</td>
-	<td>200000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>id=resource-menu-dashboard</td>
+	<td>120000</td>
 	<td></td>
 </tr>
 <tr>
@@ -38,42 +33,12 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>css=#volumes &gt; div.tile &gt; div.content &gt; a &gt; i.icon</td>
+	<td>link=Create snapshot</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=#volumes &gt; div.tile &gt; div.content &gt; a &gt; i.icon</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>//span/a[@id=&quot;table-item-dropdown_${volume_id}&quot;]/i</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>//span/a[@id=&quot;table-item-dropdown_${volume_id}&quot;]/i</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>//ul[@id=&quot;item-dropdown_${volume_id}&quot;]/li[2]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAt</td>
-	<td>//ul[@id=&quot;item-dropdown_${volume_id}&quot;]/li[2]/a</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>css=div.plus</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>css=div.plus</td>
+	<td>link=Create snapshot</td>
 	<td></td>
 </tr>
 <tr>
@@ -98,18 +63,33 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>xpath=(//input[@id='name'])[2]</td>
+	<td>id=name</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>xpath=(//input[@id='name'])[2]</td>
+	<td>id=name</td>
 	<td>${snapshot_name}</td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>xpath=(//textarea[@id='description'])[2]</td>
-	<td>${snapshot_name}</td>
+	<td>clickAt</td>
+	<td>//div/div[@id=&quot;volume_id_chosen&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>name=volume_id</td>
+	<td>value=${volume_id}</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${volume_id}</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAt</td>
+	<td>css=b</td>
+	<td></td>
 </tr>
 <tr>
 	<td>type</td>
@@ -133,12 +113,12 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>css=input.button.expand</td>
+	<td>id=create_snapshot_submit_button</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=input.button.expand</td>
+	<td>id=create_snapshot_submit_button</td>
 	<td></td>
 </tr>
 <tr>
@@ -152,14 +132,14 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
-	<td>css=a:contains(&quot;${snapshot_name}&quot;)</td>
-	<td></td>
-</tr>
-<tr>
 	<td>storeText</td>
 	<td>css=a:contains(&quot;${snapshot_name}&quot;)</td>
 	<td>snapshot_name_id</td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>css=a:contains(&quot;${snapshot_name}&quot;)</td>
+	<td></td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -176,6 +156,7 @@
 	<td>${snapshot_id}</td>
 	<td></td>
 </tr>
+
 </tbody></table>
 </body>
 </html>
