--- a/tests/selenium/KOALA/Snapshots/delete-snapshot-from-detail-page.html
+++ b/tests/selenium/KOALA/Snapshots/delete-snapshot-from-detail-page.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://10.111.101.112:8888/" />
-<title>delete-s-group-from-landing-page</title>
+<title>delete-snapshot-from-detail-page</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">delete-s-group-from-landing-page</td></tr>
+<tr><td rowspan="1" colspan="3">delete-snapshot-from-detail-page</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -17,53 +17,73 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
+	<td>assertVisible</td>
 	<td>id=resource-menu-dashboard</td>
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
+	<td>setTimeout</td>
+	<td>200000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
 	<td>id=resource-menu-dashboard</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>css=#snapshots &gt; div.tile &gt; div.content &gt; a &gt; i.icon</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=#snapshots &gt; div.tile &gt; div.content &gt; a &gt; i.icon</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>id=refresh-btn</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertVisible</td>
-	<td>id=resource-menu-netsec</td>
+	<td>link=${snapshot_name} (${snapshot_id})</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>id=resource-menu-netsec</td>
+	<td>//span/a[@id=&quot;table-item-dropdown_${snapshot_id}&quot;]/i</td>
 	<td></td>
+</tr>
+<tr>
+	<td>clickAt</td>
+	<td>//ul[@id=&quot;item-dropdown_${snapshot_id}&quot;]/li[1]/a</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=span.button.dropdown</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=delete-snapshot-action</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=#delete-snapshot-modal &gt; h3</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>css=b</td>
+	<td>${snapshot_name} (${snapshot_id})</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=resource-menuitem-securitygroups</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>link=${s_group_name}</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>//a[@id=&quot;table-item-dropdown_${s_group_id}&quot;]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>//ul[@id=&quot;item-dropdown_${s_group_id}&quot;]/li[2]/a</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForText</td>
-	<td>css=b.ng-binding</td>
-	<td>${s_group_name}</td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=delete_securitygroup_submit_button</td>
+	<td>id=delete_snapshot_submit_button</td>
 	<td></td>
 </tr>
 <tr>
@@ -76,6 +96,7 @@
 	<td>${breadcrumbs}</td>
 	<td></td>
 </tr>
+
 </tbody></table>
 </body>
 </html>
