--- a/tests/selenium/KOALA/Volumes/delete-volume-from-lp.html
+++ b/tests/selenium/KOALA/Volumes/delete-volume-from-lp.html
@@ -72,6 +72,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForVisible</td>
+	<td>id=notifications</td>
+	<td></td>
+</tr>
+<tr>
 	<td>storeText</td>
 	<td>id=notifications</td>
 	<td>breadcrumbs</td>
@@ -81,7 +86,6 @@
 	<td>${breadcrumbs}</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
