--- a/tests/selenium/SNAPSHOT_OPERATIONS.html
+++ b/tests/selenium/SNAPSHOT_OPERATIONS.html
@@ -17,7 +17,6 @@
 <tr><td><a href="KOALA/StoreAndSet/set-s-group-to-default.html">set-s-group-to-default</a></td></tr>
 <tr><td><a href="KOALA/Instances/launch-instance-from-instances-lp.html">launch-instance-from-instances-lp</a></td></tr>
 <tr><td><a href="KOALA/Instances/verify-instance-is-running.html">verify-instance-is-running</a></td></tr>
-<tr><td><a href="KOALA/StoreAndSet/store-instance-data-as-instance_1.html">store-instance-data-as-instance_1</a></td></tr>
 <tr><td><a href="KOALA/StoreAndSet/set-volume-size-to-2.html">set-volume-size-to-2</a></td></tr>
 <tr><td><a href="KOALA/Volumes/create-volume-from-dashboard.html">create-volume-from-dashboard</a></td></tr>
 <tr><td><a href="KOALA/Volumes/verify-volume-visible-on-lp.html">verify-volume-visible-on-lp</a></td></tr>
@@ -27,11 +26,32 @@
 <tr><td><a href="KOALA/Snapshots/create-snapshot-from-volumes-lp.html">create-snapshot-from-volumes-lp</a></td></tr>
 <tr><td><a href="KOALA/Snapshots/verify-snapshot-visible-on-lp.html">verify-snapshot-visible-on-lp</a></td></tr>
 <tr><td><a href="KOALA/Snapshots/verify-snapshot-status-is-completed-on-lp.html">verify-snapshot-status-is-completed-on-lp</a></td></tr>
-<tr><td><a href="KOALA/StoreAndSet/store-snapshot-data-as-snapshot_1.html">store-snapshot-data-as-snapshot_1</a></td></tr>
 <tr><td><a href="KOALA/StoreAndSet/set-availability-zone-to-second-on-list.html">set-availability-zone-to-second-on-list</a></td></tr>
 <tr><td><a href="KOALA/Snapshots/create-volume-from-snapshot-on-snapshot-lp.html">create-volume-from-snapshot-on-snapshot-lp</a></td></tr>
 <tr><td><a href="KOALA/Volumes/verify-volume-visible-on-lp.html">verify-volume-visible-on-lp</a></td></tr>
 <tr><td><a href="KOALA/Volumes/verify-volume-status-is-available-on-lp.html">verify-volume-status-is-available-on-lp</a></td></tr>
+<tr><td><a href="KOALA/Volumes/delete-volume-on-detail-page.html">delete-volume-on-detail-page</a></td></tr>
+<tr><td><a href="KOALA/Volumes/verify-volume-status-is-deleted-on-lp.html">verify-volume-status-is-deleted-on-lp</a></td></tr>
+<tr><td><a href="KOALA/Snapshots/register-snapshot-as-image-from-snapshot-lp.html">register-snapshot-as-image-from-snapshot-lp</a></td></tr>
+<tr><td><a href="KOALA/Images/verify-image-visible-on-lp.html">verify-image-visible-on-lp</a></td></tr>
+<tr><td><a href="KOALA/Snapshots/delete-snapshot-from-lp.html">delete-snapshot-from-lp</a></td></tr>
+<tr><td><a href="KOALA/Snapshots/verify-snapshot-not-present-on-lp.html">verify-snapshot-not-present-on-lp</a></td></tr>
+<tr><td><a href="KOALA/Images/verify-image-not-present-on-lp.html">verify-image-not-present-on-lp</a></td></tr>
+<tr><td><a href="KOALA/StoreAndSet/set-volume-data-to-volume_1.html">set-volume-data-to-volume_1</a></td></tr>
+<tr><td><a href="KOALA/Volumes/attach-volume-from-volumes-lp.html">attach-volume-from-volumes-lp</a></td></tr>
+<tr><td><a href="KOALA/Volumes/verify-volume-status-is-attached-on-lp.html">verify-volume-status-is-attached-on-lp</a></td></tr>
+<tr><td><a href="KOALA/Snapshots/create-snapshot-from-snapshots-lp.html">create-snapshot-from-snapshots-lp</a></td></tr>
+<tr><td><a href="KOALA/Snapshots/verify-snapshot-status-is-completed-on-lp.html">verify-snapshot-status-is-completed-on-lp</a></td></tr>
+<tr><td><a href="KOALA/Snapshots/delete-snapshot-from-detail-page.html">delete-snapshot-from-detail-page</a></td></tr>
+<tr><td><a href="KOALA/Snapshots/create-snapshot-from-dashboard.html">create-snapshot-from-dashboard</a></td></tr>
+<tr><td><a href="KOALA/Snapshots/verify-snapshot-visible-on-lp.html">verify-snapshot-visible-on-lp</a></td></tr>
+<tr><td><a href="KOALA/Snapshots/verify-snapshot-status-is-completed-on-lp.html">verify-snapshot-status-is-completed-on-lp</a></td></tr>
+<tr><td><a href="KOALA/Snapshots/delete-snapshot-from-lp.html">delete-snapshot-from-lp</a></td></tr>
+<tr><td><a href="KOALA/Instances/terminate-instance-from-detail-page.html">terminate-instance-from-detail-page</a></td></tr>
+<tr><td><a href="KOALA/Instances/verify-instance-is-terminated.html">verify-instance-is-terminated</a></td></tr>
+<tr><td><a href="KOALA/Volumes/verify-volume-status-is-available-on-lp.html">verify-volume-status-is-available-on-lp</a></td></tr>
+<tr><td><a href="KOALA/Volumes/delete-volume-from-lp.html">delete-volume-from-lp</a></td></tr>
+<tr><td><a href="KOALA/Volumes/verify-volume-status-is-deleted-on-lp.html">verify-volume-status-is-deleted-on-lp</a></td></tr>
 <tr><td><a href="KOALA/koala_logout.html">koala_logout</a></td></tr>
 </tbody></table>
 </body>
