Adding test cases to IAM_USER_EC2_QUOTAS.html

--- a/tests/selenium/KOALA/IAM_Users/create_ec2_quotas.html
+++ b/tests/selenium/KOALA/IAM_Users/create_ec2_quotas.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://10.111.5.170:8888/" />
+<link rel="selenium.base" href="https://10.111.5.170/" />
 <title>create-ec2-quotas</title>
 </head>
 <body>
@@ -82,32 +82,32 @@
 	<td>ec2_elastic_ip</td>
 </tr>
 <tr>
-	<td>type</td>
+	<td>sendKeys</td>
 	<td>id=ec2_images_max</td>
 	<td>${ec2_images}</td>
 </tr>
 <tr>
-	<td>type</td>
+	<td>sendKeys</td>
 	<td>id=ec2_instances_max</td>
 	<td>${ec2_instances}</td>
 </tr>
 <tr>
-	<td>type</td>
+	<td>sendKeys</td>
 	<td>id=ec2_volumes_max</td>
 	<td>${ec2_volumes}</td>
 </tr>
 <tr>
-	<td>type</td>
+	<td>sendKeys</td>
 	<td>id=ec2_total_size_all_vols</td>
 	<td>${ec2_volume_size}</td>
 </tr>
 <tr>
-	<td>type</td>
+	<td>sendKeys</td>
 	<td>id=ec2_snapshots_max</td>
 	<td>${ec2_snapshots}</td>
 </tr>
 <tr>
-	<td>type</td>
+	<td>sendKeys</td>
 	<td>id=ec2_elastic_ip_max</td>
 	<td>${ec2_elastic_ip}</td>
 </tr>
@@ -116,7 +116,6 @@
 	<td>id=save-quotas-btn</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
