--- a/tests/selenium/KOALA/IAM_Users/IAM_USER_EC2_QUOTAS.html
+++ b/tests/selenium/KOALA/IAM_Users/IAM_USER_EC2_QUOTAS.html
@@ -10,16 +10,18 @@
 <tr><td><b>Test Suite</b></td></tr>
 <tr><td><a href="koala_login.html">koala_login</a></td></tr>
 <tr><td><a href="get_dashboard_counts.html">get-dashboard-counts</a></td></tr>
-<tr><td><a href="../../eucaconsole/tests/selenium/KOALA/IAM_Users/create-user_1-with-password-no-policy.html">create-user_1-with-password-no-policy</a></td></tr>
+<tr><td><a href="create-user_1-with-password-no-policy.html">create-user_1-with-password-no-policy</a></td></tr>
 <tr><td><a href="verify-user-was-created.html">verify-user_1-was-created</a></td></tr>
 <tr><td><a href="verify-users-number-increased-by-1.html">verify-users-number-increased-by-1</a></td></tr>
 <tr><td><a href="add-user-access-to-user_1.html">add-user-access-to-user_1</a></td></tr>
 <tr><td><a href="verify-user-access-policy-to-user_1.html">verify-user-access-policy-to-user_1</a></td></tr>
-<tr><td><a href="../../eucaconsole/tests/selenium/KOALA/IAM_Users/create_ec2_quotas.html">create-ec2-quotas</a></td></tr>
-<tr><td><a href="../../eucaconsole/tests/selenium/KOALA/IAM_Users/verify-ec2-values.html">verify-ec2-values</a></td></tr>
+<tr><td><a href="create_ec2_quotas.html">create_ec2_quotas</a></td></tr>
+<tr><td><a href="verify-ec2-values.html">verify-ec2-values</a></td></tr>
 <tr><td><a href="koala_logout.html">koala_logout</a></td></tr>
 <tr><td><a href="user_1-logon.html">user_1-logon</a></td></tr>
-<tr><td><a href="../../eucaconsole/tests/selenium/KOALA/IAM_Users/verify-ec2-instance-quota.html">verify-ec2-instance-quota</a></td></tr>
+<tr><td><a href="verify-ec2-instance-quota.html">verify-ec2-instance-quota</a></td></tr>
+<tr><td><a href="verify-ec2-volume-quota.html">verify-ec2-volume-quota</a></td></tr>
+<tr><td><a href="verify-ec2-volume-size-quota.html">verify-ec2-volume-size-quota</a></td></tr>
 <tr><td><a href="user_1-logout.html">user_1-logout</a></td></tr>
 <tr><td><a href="koala_login.html">koala_login</a></td></tr>
 <tr><td><a href="delete-user_1.html">delete-user_1</a></td></tr>
