--- a/tests/selenium/KOALA/IAM_Users/create-user_1-with-password-no-policy.html
+++ b/tests/selenium/KOALA/IAM_Users/create-user_1-with-password-no-policy.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://10.111.5.170:8888/" />
+<link rel="selenium.base" href="https://10.111.5.170/" />
 <title>iam-create-user-with-no-attributes</title>
 </head>
 <body>
@@ -77,7 +77,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
+	<td>clickAndWait</td>
 	<td>id=create-user-btn</td>
 	<td></td>
 </tr>
