--- a/tests/selenium/KOALA/IAM_Users/koala_logout.html
+++ b/tests/selenium/KOALA/IAM_Users/koala_logout.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://10.111.101.112:8888/" />
+<link rel="selenium.base" href="https://10.111.5.170/" />
 <title>koala_logout</title>
 </head>
 <body>
