--- a/tests/selenium/KOALA/IAM_Users/verify-ec2-volume-size-quota.html
+++ b/tests/selenium/KOALA/IAM_Users/verify-ec2-volume-size-quota.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="https://10.111.5.170/" />
-<title>iam-verify-user</title>
+<title>verify-ec2-volume-size-quota</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">iam-verify-user</td></tr>
+<tr><td rowspan="1" colspan="3">verify-ec2-volume-size-quota</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -22,40 +22,66 @@
 	<td></td>
 </tr>
 <tr>
+	<td>open</td>
+	<td>/</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>id=resource-menu-dashboard</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>id=resource-menu-iam</td>
+	<td>id=resource-menu-storage</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=resource-menuitem-users</td>
+	<td>id=resource-menuitem-volumes</td>
 	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
-	<td>link=${user_1}</td>
+	<td>clickAndWait</td>
+	<td>id=create-volume-btn</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertVisible</td>
-	<td>link=${user_1}</td>
+	<td>type</td>
+	<td>id=name</td>
+	<td>ui-volume-1</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=size</td>
+	<td>2</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=create_volume_submit_button</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=${user_1}</td>
+	<td>assertTextPresent</td>
+	<td>Quota exceeded while trying to create: volume by user:</td>
 	<td></td>
 </tr>
 <tr>
-	<td>echo</td>
-	<td>${user_1}</td>
-	<td></td>
+	<td>storeXpathCount</td>
+	<td>//table[1]/tbody/tr</td>
+	<td>tcount</td>
 </tr>
+<tr>
+	<td>assertEval</td>
+	<td>2==${tcount}</td>
+	<td>true</td>
+</tr>
+
 </tbody></table>
 </body>
 </html>
