Changes after implementing sendKeys, changes to IP ops sequence.

--- a/tests/selenium/KEYPAIR_OPERATIONS.html
+++ b/tests/selenium/KEYPAIR_OPERATIONS.html
@@ -16,10 +16,16 @@
 <tr><td><a href="KOALA/Keypairs/create-key-pair-from-landing-page.html">create-key-pair-from-landing-page</a></td></tr>
 <tr><td><a href="KOALA/Keypairs/verify-key-pair-was-created.html">verify-key-pair-was-created</a></td></tr>
 <tr><td><a href="KOALA/StoreAndSet/store-keypair-name-as-keypair_2.html">store-keypair-name-as-keypair_2</a></td></tr>
+<tr><td><a href="KOALA/Keypairs/import-key-pair.html">import-key-pair</a></td></tr>
+<tr><td><a href="KOALA/StoreAndSet/store-keypair-name-as-keypair_3.html">store-keypair-name-as-keypair_3</a></td></tr>
+<tr><td><a href="KOALA/Keypairs/verify-key-pair-was-created.html">verify-key-pair-was-created</a></td></tr>
 <tr><td><a href="KOALA/StoreAndSet/set-keypair-name-to-keypair_1.html">set-keypair-name-to-keypair_1</a></td></tr>
 <tr><td><a href="KOALA/Keypairs/delete-key-pair-from-detail-page.html">delete-key-pair-from-detail-page</a></td></tr>
 <tr><td><a href="KOALA/Keypairs/verify-key-pair-not-present-on-lp.html">verify-key-pair-not-present-on-lp</a></td></tr>
 <tr><td><a href="KOALA/StoreAndSet/set-keypair-name-to-keypair_2.html">set-keypair-name-to-keypair_2</a></td></tr>
+<tr><td><a href="KOALA/Keypairs/delete-key-pair-from-landing-page.html">delete-key-pair-from-landing-page</a></td></tr>
+<tr><td><a href="KOALA/Keypairs/verify-key-pair-not-present-on-lp.html">verify-key-pair-not-present-on-lp</a></td></tr>
+<tr><td><a href="KOALA/StoreAndSet/set-keypair-name-to-keypair_3.html">set-keypair-name-to-keypair_3</a></td></tr>
 <tr><td><a href="KOALA/Keypairs/delete-key-pair-from-landing-page.html">delete-key-pair-from-landing-page</a></td></tr>
 <tr><td><a href="KOALA/Keypairs/verify-key-pair-not-present-on-lp.html">verify-key-pair-not-present-on-lp</a></td></tr>
 <tr><td><a href="KOALA/koala_logout.html">koala_logout</a></td></tr>
