Updated IAM_USER_EC2_QUOTAS.html test suite

--- a/tests/selenium/KOALA/IAM_Users/verify-ec2-instance-quota.html
+++ b/tests/selenium/KOALA/IAM_Users/verify-ec2-instance-quota.html
@@ -47,11 +47,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>name=name_0</td>
-	<td></td>
-</tr>
-<tr>
 	<td>click</td>
 	<td>css=#visit-step-3 &gt; span</td>
 	<td></td>
@@ -60,6 +55,11 @@
 	<td>select</td>
 	<td>id=keypair</td>
 	<td>label=None (advanced option)</td>
+</tr>
+<tr>
+	<td>assertValue</td>
+	<td>id=launch-instance-btn-step3</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
