--- a/tests/selenium/KOALA/IAM_Users/verify-ec2-volume-quota.html
+++ b/tests/selenium/KOALA/IAM_Users/verify-ec2-volume-quota.html
@@ -77,6 +77,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForTextPresent</td>
+	<td>available</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
 	<td>id=name</td>
 	<td>ui-volume-2</td>
@@ -116,7 +121,11 @@
 	<td>id=delete_volume_submit_button</td>
 	<td></td>
 </tr>
-
+<tr>
+	<td>waitForTextPresent</td>
+	<td>deleted</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
