Added more ec2 quota tests.

--- a/tests/selenium/KOALA/IAM_Users/verify-ec2-instance-quota.html
+++ b/tests/selenium/KOALA/IAM_Users/verify-ec2-instance-quota.html
@@ -77,8 +77,18 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=#visit-step-3 &gt; span</td>
+	<td>css=#visit-step-2 &gt; span</td>
 	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=instance_type</td>
+	<td>label=m1.medium: 1 CPUs, 512 memory (MB), 10 disk (GB,root device)</td>
 </tr>
 <tr>
 	<td>select</td>
@@ -137,8 +147,13 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=#visit-step-3 &gt; span</td>
+	<td>css=#visit-step-2 &gt; span</td>
 	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=instance_type</td>
+	<td>label=m1.medium: 1 CPUs, 512 memory (MB), 10 disk (GB,root device)</td>
 </tr>
 <tr>
 	<td>select</td>
@@ -229,6 +244,11 @@
 	<td>type</td>
 	<td>id=image-id-input</td>
 	<td>${image}</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=instance_type</td>
+	<td>label=m1.medium: 1 CPUs, 512 memory (MB), 10 disk (GB,root device)</td>
 </tr>
 <tr>
 	<td>click</td>
