--- a/tests/selenium/KOALA/IAM_Users/verify-ec2-snapshot-quota.html
+++ b/tests/selenium/KOALA/IAM_Users/verify-ec2-snapshot-quota.html
@@ -3,12 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>verify-ec2-volume-quota</title>
+<link rel="selenium.base" href="https://10.111.5.170/" />
+<title>verify-ec2-snapshot-quota</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">verify-ec2-volume-quota</td></tr>
+<tr><td rowspan="1" colspan="3">verify-ec2-snapshot-quota</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -37,7 +38,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=resource-menuitem-volumes</td>
+	<td>id=resource-menuitem-snapshots</td>
 	<td></td>
 </tr>
 <tr>
@@ -57,17 +58,32 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=create-volume-btn</td>
+	<td>id=create-snapshot-btn</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=name</td>
-	<td>ui-volume-1</td>
+	<td>snapshot-1</td>
+</tr>
+<tr>
+	<td>doubleClickAt</td>
+	<td>css=a.chosen-single</td>
+	<td></td>
+</tr>
+<tr>
+	<td>doubleClickAt</td>
+	<td>//div[@id='volume_id_chosen']/div/ul/li[2]</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=create_volume_submit_button</td>
+	<td>id=create_snapshot_submit_button</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForTextPresent</td>
+	<td>completed</td>
 	<td></td>
 </tr>
 <tr>
@@ -77,32 +93,37 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=resource-menuitem-volumes</td>
+	<td>id=resource-menuitem-snapshots</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=create-volume-btn</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForTextPresent</td>
-	<td>available</td>
+	<td>id=create-snapshot-btn</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=name</td>
-	<td>ui-volume-2</td>
+	<td>snapshot-2</td>
+</tr>
+<tr>
+	<td>doubleClickAt</td>
+	<td>css=a.chosen-single</td>
+	<td></td>
+</tr>
+<tr>
+	<td>doubleClickAt</td>
+	<td>//div[@id='volume_id_chosen']/div/ul/li[2]</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=create_volume_submit_button</td>
+	<td>id=create_snapshot_submit_button</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertTextPresent</td>
-	<td>Quota exceeded while trying to create: volume by user:</td>
+	<td>Quota exceeded while trying to create: snapshot by user:</td>
 	<td></td>
 </tr>
 <tr>
@@ -119,6 +140,21 @@
 	<td>assertEval</td>
 	<td>${tcount1}+1==${tcount2}</td>
 	<td>true</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=i.fi-widget</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=Delete snapshot</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=delete_snapshot_submit_button</td>
+	<td></td>
 </tr>
 </tbody></table>
 </body>
