--- a/tests/selenium/KOALA/IAM_Users/IAM_USER_EC2_QUOTAS.html
+++ b/tests/selenium/KOALA/IAM_Users/IAM_USER_EC2_QUOTAS.html
@@ -22,6 +22,8 @@
 <tr><td><a href="verify-ec2-instance-quota.html">verify-ec2-instance-quota</a></td></tr>
 <tr><td><a href="verify-ec2-volume-quota.html">verify-ec2-volume-quota</a></td></tr>
 <tr><td><a href="verify-ec2-volume-size-quota.html">verify-ec2-volume-size-quota</a></td></tr>
+<tr><td><a href="verify-ec2-snapshot-quota.html">verify-ec2-snapshot-quota</a></td></tr>
+<tr><td><a href="verify-ec2-allocate-elastic-ip-address-quota.html">verify-ec2-allocate-elastic-ip-address-quota</a></td></tr>
 <tr><td><a href="user_1-logout.html">user_1-logout</a></td></tr>
 <tr><td><a href="koala_login.html">koala_login</a></td></tr>
 <tr><td><a href="delete-user_1.html">delete-user_1</a></td></tr>
