--- a/tests/selenium/KOALA/IAM_Users/verify-ec2-allocate-elastic-ip-address-quota.html
+++ b/tests/selenium/KOALA/IAM_Users/verify-ec2-allocate-elastic-ip-address-quota.html
@@ -3,12 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>verify-ec2-volume-quota</title>
+<link rel="selenium.base" href="https://10.111.5.170/" />
+<title>verify-ec2-allocate-elastic-ip-address-quota</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">verify-ec2-volume-quota</td></tr>
+<tr><td rowspan="1" colspan="3">verify-ec2-allocate-elastic-ip-address-quota</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -26,18 +27,23 @@
 	<td></td>
 </tr>
 <tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>id=resource-menu-dashboard</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>id=resource-menu-storage</td>
+	<td>id=resource-menu-netsec</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=resource-menuitem-volumes</td>
+	<td>id=resource-menuitem-eips</td>
 	<td></td>
 </tr>
 <tr>
@@ -56,53 +62,38 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=create-volume-btn</td>
+	<td>click</td>
+	<td>id=allocate-ipaddresses-btn</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=name</td>
-	<td>ui-volume-1</td>
+	<td>id=ipcount</td>
+	<td>1</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=create_volume_submit_button</td>
+	<td>id=allocate-ipaddresses-dialog-btn</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>id=resource-menu-storage</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=resource-menuitem-volumes</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=create-volume-btn</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForTextPresent</td>
-	<td>available</td>
+	<td>id=allocate-ipaddresses-btn</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=name</td>
-	<td>ui-volume-2</td>
+	<td>id=ipcount</td>
+	<td>1</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=create_volume_submit_button</td>
+	<td>id=allocate-ipaddresses-dialog-btn</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertTextPresent</td>
-	<td>Quota exceeded while trying to create: volume by user:</td>
+	<td>Quota exceeded while trying to create: address by user:</td>
 	<td></td>
 </tr>
 <tr>
@@ -120,6 +111,22 @@
 	<td>${tcount1}+1==${tcount2}</td>
 	<td>true</td>
 </tr>
+<tr>
+	<td>click</td>
+	<td>css=i.fi-widget</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=Release to cloud</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=release_ip_submit_button</td>
+	<td></td>
+</tr>
+
 </tbody></table>
 </body>
 </html>
